kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dws-frontend
  labels:
    name: dws-frontend
    app: frontend
